[gd_scene load_steps=7 format=3 uid="uid://cwseeacjaeuni"]

[ext_resource type="Script" path="res://entities/mobs/Enemy.gd" id="1_gf03x"]
[ext_resource type="Texture2D" uid="uid://dpluhx8mta40i" path="res://entities/mobs/slime/slime.png" id="2_d4hhx"]
[ext_resource type="Texture2D" uid="uid://ctjk2mxqxpyqk" path="res://Logo.png" id="3_07fhj"]

[sub_resource type="Animation" id="Animation_3p6cb"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_538ks"]
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 0.6, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c7awx"]
_data = {
"Walk": SubResource("Animation_3p6cb"),
"idle": SubResource("Animation_538ks")
}

[node name="Slime" type="CharacterBody2D"]
scale = Vector2(5, 5)
script = ExtResource("1_gf03x")
RAYCAST_DETECT_DIST = 80
RAYCAST_FOLLOW_DIST = 120

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_d4hhx")
hframes = 4
vframes = 3
frame = 6
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://mobs/slime/slime.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "b663b135c9fe0ab993d1bd7a6c6ddcaf"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c7awx")
}
autoplay = "idle"

[node name="SightRayCast" type="RayCast2D" parent="."]
target_position = Vector2(75, 0)
collision_mask = 2

[node name="PatrolRayCast" type="RayCast2D" parent="."]
collision_mask = 0
hit_from_inside = true

[node name="Sprite2D2" type="Sprite2D" parent="."]
scale = Vector2(0.01, 0.01)
texture = ExtResource("3_07fhj")

[node name="Timers" type="Node" parent="."]

[node name="PatrolIdleTimer" type="Timer" parent="Timers"]

[node name="IdleTimer" type="Timer" parent="Timers"]
autostart = true

[connection signal="timeout" from="Timers/PatrolIdleTimer" to="." method="_on_patrol_idle_timeout"]
[connection signal="timeout" from="Timers/IdleTimer" to="." method="_on_idle_timer_timeout"]
